backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    role: backend
spec:
  containers:
  - name: backend
    image: hashicorp/http-echo
    args:
      - "-text=Hello from backend"
    ports:
      - containerPort: 5678
