backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    role: backend
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
